# ldoce

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  server.py  word_utils.py
.github/workflows/: docker-image.yml
extension/: background.js  manifest.json  options.html  options.js
mdd&mdx/: .gitattributes  LongmanDictionaryOfContemporaryEnglish6thEnEn.mdd  LongmanDictionaryOfContemporaryEnglish6thEnEn.mdx
mdict/: mdict_db.py  read_mdict.py
mdict/utils/: lzo.py  pureSalsa20.py  ripemd128.py
static/: LongmanDictionaryOfContemporaryEnglish6thEnEn.css
tests/: test_server.py
